--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,22 +1,38 @@
 {% extends "base.html" %}
 
-{% block title %}Till login{% endblock %}
-
-{% block heading %}Till login{% endblock %}
+{% block title %}Staff login{% endblock %}
 
 {% block content %}
-
-{% if user.is_authenticated %}
-<p><strong>Note:</strong> You are already logged in as {{user.get_full_name}}.  <a href="{% url "tillweb-pubroot" %}">Click here to go to the index page.</a></p>
-{% endif %}
-
-<form method="post" action="{% url "login-page" %}">
-{% csrf_token %}
-<table class="kvtable">{{form.as_table}}</table>
-<input type="submit" value="Log in" />
-<input type="hidden" name="next" value="{{ next|escape }}" />
-</form>
-
-<p><a href="{% url "frontpage" %}">Back to front page</a></p>
-
+<div class="container text-center mt-5">
+  <div class="row">
+    <div class="col">
+      <form method="post" action="{% url "login-page" %}">
+	{% csrf_token %}
+	<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+	{% if form.errors %}
+	<div class="alert alert-danger">
+	  <p>{{form.non_field_errors}}</p>
+	</div>
+	{% endif %}
+	{% if user.is_authenticated %}
+	<div class="alert alert-warning">
+	  <strong>Note:</strong> You are already logged in as {{user.get_full_name}}.
+	</div>
+	{% endif %}
+	<div class="form-group">
+	  {{form.username.errors}}
+	  <label for="{{form.username.id_for_label}}">Username:</label>
+	  {{form.username}}
+	</div>
+	<div class="form-group">
+	  {{form.password.errors}}
+	  <label for="{{form.password.id_for_label}}">Password:</label>
+	  {{form.password}}
+	</div>
+	<button class="btn btn-primary btn-lg" type="submit">Sign in</button>
+	<input type="hidden" name="next" value="{{ next|escape }}">
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
