--- a/templates/registration/password-change.html
+++ b/templates/registration/password-change.html
@@ -1,20 +1,19 @@
 {% extends "base.html" %}
+{% load django_bootstrap_breadcrumbs %}
 
 {% block title %}Change password{% endblock %}
-
-{% block heading %}Change password{% endblock %}
+{% block breadcrumbs %}
+{{ block.super }}
+{% breadcrumb "Change password" "password-change-page" %}
+{% endblock %}
 
 {% block content %}
-{% if form.errors %}
-<p style="color: red;">Please correct the error{{ form.errors|pluralize }} below.</p>
-{% endif %}
-
-<form method="post" action="">
-{% csrf_token %}
-  <table class="kvtable">
-  {{ form.as_table }}
-  </table>
-  <input type="submit" value="Change password" />
-</form>
+<main class="container">
+  <form method="post" action="">
+    {% csrf_token %}
+    {% include "form.html" %}
+    <button class="btn btn-primary" type="submit">Change password</button>
+  </form>
+</main>
 
 {% endblock %}
