--- a/templates/registration/userlist.html
+++ b/templates/registration/userlist.html
@@ -1,19 +1,24 @@
 {% extends "base.html" %}
+{% load django_bootstrap_breadcrumbs %}
 
 {% block title %}Till web users{% endblock %}
-
-{% block heading %}Till web users{% endblock %}
+{% block breadcrumbs %}
+{{ block.super }}
+{% breadcrumb "User list" "userlist" %}
+{% endblock %}
 
 {% block content %}
 
+<main class="container">
+
 <h2>Current users</h2>
 
-<table class="userlist">
-  <thead>
+<table class="table table-striped table-hover">
+  <thead class="thead-light">
     <tr>
-      <th>Username</th>
-      <th>First name</th>
-      <th>Last name</th>
+      <th scope="col">Username</th>
+      <th scope="col">First name</th>
+      <th scope="col">Last name</th>
     </tr>
   </thead>
   <tbody>
@@ -30,13 +35,9 @@
 <h2>Add new user</h2>
 
 <form method="post" action="">
-{% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
-  <input type="submit" value="Add new user" />
+  {% csrf_token %}
+  {% include "form-horizontal.html" %}
+  <button class="btn btn-primary" type="submit">Add new user</button>
 </form>
-
-<p><a href="{% url "tillweb-pubroot" %}">Back to till</a></p>
 
 {% endblock %}
