--- a/templates/form-field.html
+++ b/templates/form-field.html
@@ -4,7 +4,7 @@
     {% if field.field.widget.input_type == "file" %}
       {% render_field field class+="form-control-file is-invalid" %}
     {% elif field.field.widget.input_type == "checkbox" %}
-      {% render_field field class+="form-check-input is-invalid" %}
+      {% render_field field class+="position-static is-invalid" %}
     {% else %}
       {% render_field field class+="form-control is-invalid" %}
     {% endif %}
@@ -17,7 +17,7 @@
     {% if field.field.widget.input_type == "file" %}
       {% render_field field class+="form-control is-valid" %}
     {% elif field.field.widget.input_type == "checkbox" %}
-      {% render_field field class+="form-check-input is-valid" %}
+      {% render_field field class+="position-static is-valid" %}
     {% else %}
       {% render_field field class+="form-control is-valid" %}
     {% endif %}
@@ -26,7 +26,7 @@
   {% if field.field.widget.input_type == "file" %}
     {% render_field field class+="form-control-file" %}
   {% elif field.field.widget.input_type == "checkbox" %}
-    {% render_field field class+="form-check-input" %}
+    {% render_field field class+="position-static" %}
   {% else %}
     {% render_field field class+="form-control" %}
   {% endif %}
