Set alert class based on message tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
 {% if messages %}
 <div class="container">
   {% for message in messages %}
-  <div class="alert alert-primary alert-dismissable fade show">
+  <div class="alert {{message.tags}} alert-dismissable fade show" role="alert">
     {{ message }}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
