--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,10 @@
 	</button>
 	<div class="dropdown-menu dropdown-menu-right" aria-labelledby="TopNavbarUserDropdown">
 	  <a class="dropdown-item" href="{% url "password-change-page" %}">Change password</a>
-	  <a class="dropdown-item" href="{% url "logout-page" %}">Log out</a>
+	  <form action="{% url "logout-page" %}" method="post">
+	    {% csrf_token %}
+	    <button type="submit" class="dropdown-item">Log out</button>
+	  </form>
 	</div>
       </div>
     </div>
